# injected

./: .gitignore  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  requirements-dev.txt  requirements.txt  setup.py
.github/workflows/: build_dotnet.yml
backends/dotnet/: CMakeLists.txt
backends/dotnet/src/wpf/: Main.cs
backends/hook/: CMakeLists.txt
backends/qt/: CMakeLists.txt
backends/qt/src/winmsg_listener/: CMakeLists.txt  pipe_server.cpp  qt_discovery_actions.cpp  qt_discovery_actions.h  qt_element_summary.cpp  qt_element_summary.h  qt_property_actions.cpp  qt_property_actions.h  qt_server.cpp  qt_server.h  qt_utils.h  qt_widget_actions.cpp  qt_widget_actions.h
backends/qt5/src/winmsg_listener/: CMakeLists.txt  dllmain.cpp  pipe_server.h  qt_discovery_actions.cpp  qt_element_summary.cpp  qt_object_store.h  qt_replies.cpp  qt_server.h  qt_utils.cpp  qt_widget_actions.h
backends/qt6/src/winmsg_listener/: CMakeLists.txt  linux_entry.cpp  pipe_server.cpp  pipe_server.h  qt_discovery_actions.cpp  qt_object_store.cpp  qt_property_actions.cpp  qt_replies.h  qt_utils.cpp  qt_widget_actions.cpp
src/injectdll/: injector.py
src/injected/: actionlogger.py  api.py  cfuncs.py  channel.py  sysinfo.py
src/injectlib/: api.py  cfuncs.py  channel.py  injector.py  linux_injector.py
